Fix scrollbar behavior

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import "normalize.css";
 
+html {
+  overflow-y: auto;
+  scrollbar-gutter: stable both-edges;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
